crates/sieve-rules/bench-data/benign-near/extra-generic-multilingual/extra-multilingual-002.txt
我用 cargo build 报这个错，不知道怎么解决：

error[E0502]: cannot borrow `data` as mutable because it is also borrowed as immutable
  --> src/main.rs:12:5
   |
10 |     let r = &data;
   |             ----- immutable borrow occurs here
11 |     println!("{}", r);
12 |     data.push(42);
   |     ^^^^^^^^^^^^^ mutable borrow occurs here
13 |     println!("{}", r);
   |                    - immutable borrow later used here

感觉 Rust 的借用检查太严格了，有没有简单点的写法？
